--- a/Frontend/admin/html/login.html
+++ b/Frontend/admin/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dentique Patient Login</title>
+    <title>Dentique Admin Login</title>
     <link rel="stylesheet" href="../../styles/LoginRegister.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         </div>
         <div class="loginSection">
             <div class="form">
-                <h2 class="heading">Welcome to Dentique</h2>
+                <h2 class="heading">Welcome Back, Admin</h2>
                 <form>
                     <input type="email" placeholder="Enter your Email" required>
                     <input type="password" placeholder="Enter Password" required>
@@ -22,10 +22,9 @@
                 <div class="underline"></div>
                 <a href="#"> <button class="btn googleBtn">Google</button></a>
                 <a href="#"><button class="btn facebookBtn">Facebook</button></a>
-                <a href="./register.html" class="AccountCreation">Create an Account</a>
             </div>
         </div>
     </div>
-    <script src="../js/patientsLogin.js"></script>
+    <script src="../js/adminLogin.js"></script>
 </body>
 </html>
