--- a/Frontend/pages/doctors.html
+++ b/Frontend/pages/doctors.html
@@ -77,12 +77,12 @@
           <div class="card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
               data-mdb-ripple-color="light">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
+              <img src="https://img.freepik.com/free-photo/attractive-young-male-nutriologist-lab-coat-smiling-against-white-background_662251-2960.jpg"
                 class="w-100" />
               <a href="#!">
                 <div class="mask">
                   <div class="d-flex justify-content-start align-items-end h-100">
-                    <h5><span class="badge bg-dark ms-2">NEW</span></h5>
+                    <h5><span class="badge bg-dark ms-2">Dentist</span></h5>
                   </div>
                 </div>
                 <div class="hover-overlay">
@@ -92,12 +92,13 @@
             </div>
             <div class="card-body">
               <a href="" class="text-reset">
-                <h5 class="card-title mb-2">Denim shirt</h5>
+                <h5 class="card-title mb-2">Dr. Akash</h5>
               </a>
               <a href="" class="text-reset ">
-                <p>Shirt</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, dignissimos.</p>
               </a>
-              <h6 class="mb-3 price">120$</h6>
+              <h6 class="mb-3 price">$100</h6>
+              <button  class="btn btn-dark">Book now</button>
             </div>
           </div>
         </div>
