Refactoring Login/Register functionalities

--- a/Frontend/doctor/html/login.html
+++ b/Frontend/doctor/html/login.html
@@ -22,8 +22,7 @@
                 <div class="underline"></div>
                 <a href="#"> <button class="btn googleBtn">Google</button></a>
                 <a href="#"><button class="btn facebookBtn">Facebook</button></a>
-                <!-- <div class="underline"></div> -->
-                <a href="./register.html" class="AccountCreation">Create an Account</a>
+                <a href="./register.html" class="AccountCreation">Don't have an Account? Create an Account</a>
             </div>
         </div>
     </div>
