--- a/Frontend/patients/html/login.html
+++ b/Frontend/patients/html/login.html
@@ -22,7 +22,7 @@
                 <div class="underline"></div>
                 <a href="#"> <button class="btn googleBtn">Google</button></a>
                 <a href="#"><button class="btn facebookBtn">Facebook</button></a>
-                <a href="./register.html" class="AccountCreation">Create an Account</a>
+                <a href="./register.html" class="AccountCreation">Don't have an account? <span>Create an Account</span></a>
             </div>
         </div>
     </div>
