Appointment booking page ui created, and functionality added

--- a/Frontend/pages/doctors.html
+++ b/Frontend/pages/doctors.html
@@ -8,6 +8,7 @@
     <!-- Google Fonts --><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB --><link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
     <!-- flatpickr --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <!-- sweet alert --> <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <style>
     .doctorImage{
       height: 250px;
@@ -25,7 +26,7 @@
     <div class="container-fluid">
   
       <!-- Navbar brand -->
-      <a class="navbar-brand" href="#">Categories:</a>
+      <a class="navbar-brand" href="#">Doctors:</a>
   
       <!-- Toggle button -->
       <button 
@@ -45,24 +46,25 @@
   
           <!-- Link -->
           <li class="nav-item acitve">
-            <a class="nav-link text-white" href="#">All</a>
+            <a class="nav-link text-white" href="#">Select a doctor from the list of all our doctors</a>
           </li>
-          <li class="nav-item">
-                <a class="nav-link text-white" href="#">Shirts</a>
+          <!-- <li class="nav-item">
+                <a class="nav-link text-white" href="#">Dentist</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Sport wears</a>
+                <a class="nav-link text-white" href="#"></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#">Outwears</a>
-              </li>
+              </li> -->
   
         </ul>
   
         <!-- Search -->
-        <form class="w-auto py-1" style="max-width: 12rem">
+        <!-- <form class="w-auto py-1" style="max-width: 12rem">
           <input type="search" class="form-control rounded-0" placeholder="Search" aria-label="Search">
-        </form>
+          
+        </form> -->
   
       </div>
     </div>
