--- a/Frontend/admin/html/login.html
+++ b/Frontend/admin/html/login.html
@@ -20,7 +20,7 @@
                     <input type="submit" value="Submit">
                 </form>
                 <div class="underline"></div>
-                <a href="#"> <button class="btn googleBtn">Google</button></a>
+                <a href="http://localhost:8998/admin/auth/google"> <button class="btn googleBtn">Google</button></a>
                 <a href="#"><button class="btn facebookBtn">Facebook</button></a>
             </div>
         </div>
