--- a/Frontend/pages/myappointments.html
+++ b/Frontend/pages/myappointments.html
@@ -15,9 +15,11 @@
             padding-right: 5%;
         }
     </style>
+    <link rel="stylesheet" href="../styles/loader.css">
 </head>
 <body>
-    <h1 style="text-align: center; margin: 50px;" >My appointments</h1>
+    <span id="loader" class="loader"></span>
+    <h1 style="text-align: center; margin: 50px;" >Your Appointments</h1>
     <div id="appointMentDiv" class="row d-flex justify-content-center">
 
         <!-- <div  class="col-sm-5 m-4 ">
