login/signup oauth

--- a/Frontend/doctor/html/login.html
+++ b/Frontend/doctor/html/login.html
@@ -19,10 +19,10 @@
                     <input type="password" placeholder="Enter Password" required>
                     <input type="submit" value="Submit">
                 </form>
-                <div class="underline"></div>
-                <a href="#"> <button class="btn googleBtn">Google</button></a>
-                <a href="#"><button class="btn facebookBtn">Facebook</button></a>
-                <a href="./register.html" class="AccountCreation">Don't have an Account? Create an Account</a>
+                <!-- <div class="underline"></div> -->
+                <!-- <a href="http://localhost:8998/patient/auth/google"> <button class="btn googleBtn">Google</button></a>
+                <a href="#"><button class="btn facebookBtn">Facebook</button></a> -->
+                <!-- <a href="./register.html" class="AccountCreation">Don't have an Account? Create an Account</a> -->
             </div>
         </div>
     </div>
