--- a/Frontend/doctor/html/register.html
+++ b/Frontend/doctor/html/register.html
@@ -22,8 +22,8 @@
                     <input type="submit" value="Submit">
                 </form>
                 <div class="underline"></div>
-                <a href="#"> <button class="btn googleBtn">Google</button></a>
-                <a href="#"><button class="btn facebookBtn">Facebook</button></a>
+                <!-- <a href="#"> <button class="btn googleBtn">Google</button></a>
+                <a href="#"><button class="btn facebookBtn">Facebook</button></a> -->
                 <!-- <div class="underline"></div> -->
                 <a href="./login.html" class="AccountCreation">Already have an Account?</a>
             </div>
