backend fucntionality completed

--- a/Frontend/pages/bookappointment.html
+++ b/Frontend/pages/bookappointment.html
@@ -10,10 +10,12 @@
     <!-- flatpickr --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <!-- sweet alert --> <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title  >Book Appointment</title>
+    <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/loader.css">
 </head>
 <body>
     <span id="loader" class="loader"></span>
+    <div id="nav"></div>
     <h1 style="margin: 50px !important; text-align: center;">Book an Appointment</h1>
     <section class="vh-100 mt-4">
         <div class="container-fluid h-custom">
@@ -86,7 +88,15 @@
         </div>
        
       </section>
+
+
+<!-- footer -->
+<div id="footer" class="thend">
+  
+</div>
+
 </body>
 <!-- MDB --><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
 <script src="../scripts/book.js"></script>
+<script src="../scripts/navbar.js"></script>
 </html>
