--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div class="bookingBtn"> Book Now</div>
+    <div class="bookingBtn"> <a href="#">Book now</a></div>
     <video loop autoplay muted class="video" src="./video/videoplayback.mp4" type="video/mp4" ></video>
     <img class="second"  src="./images/image4.png" alt="">
     <img class="second" style="margin-top: -1%;" src="./images/image3.png" alt="">
