--- a/Frontend/patients/html/register.html
+++ b/Frontend/patients/html/register.html
@@ -22,8 +22,7 @@
                     <input type="submit" value="Submit">
                 </form>
                 <div class="underline"></div>
-                <a href="#"> <button class="btn googleBtn">Google</button></a>
-                <a href="#"><button class="btn facebookBtn">Facebook</button></a>
+                <a href="http://localhost:8998/patient/auth/google"> <button class="btn googleBtn">Google</button></a>
                 <a href="./login.html" class="AccountCreation">Already have an Account?</a>
             </div>
         </div>
