css loader added on appointment page

--- a/Frontend/pages/doctors.html
+++ b/Frontend/pages/doctors.html
@@ -15,9 +15,12 @@
     }
    </style>
    <link rel="stylesheet" href="../styles/index.css">
+   <link rel="stylesheet" href="../styles/loader.css">
 </head>
 <body>
+  
   <div id="nav"></div>
+  <span id="loader" class="loader"></span>
   <main>
 
 
