--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -123,18 +123,19 @@
         </div> -->
         <nav>
             <div class="logo">
-              <img src="./images/dentique-logo-web-8f7226ed.png" alt="Logo">
+                <a href="./index.html">
+              <img src="./images/dentique-logo-web-8f7226ed.png" alt="Logo"></a>
               <!-- <h2 style="color: #000;">My Website</h2> -->
             </div>
             <div class="navbar-inner"></div>
             <ul>
-              <li><a href="#">Doctors</a></li>
+              <li><a href="./pages/doctors.html">Doctors</a></li>
               <li class="dropdown">
                 <a href="#">Login</a>
                 <div class="dropdown-content">
-                  <a href="#">User Login</a>
-                  <a href="#">Doctor Login</a>
-                  <a href="#">Patient Login</a>
+                  <a href="./patients/html/login.html">User Login</a>
+                  <a href="./doctor/html/login.html">Doctor Login</a>
+                  <a href="./admin/html/login.html">Admin Login</a>
                 </div>
               </li>
               <li><a href="#" class="logout-link">Logout</a></li>
