Home Page Updated

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -163,20 +163,19 @@
         <p class="foot1">If you are using a screen reader and are having problems using this website, please call <br> 1-844-462-8299 for assistance.</p>
     </div> -->
     <div class="bookingBtn"> <a href="#">Book now</a></div>
-    <video loop autoplay muted class="video" src="./video/videoplayback.mp4" type="video/mp4" ></video>
-    <img class="second"  src="./images/image4.png" alt="">
-    <img class="second" style="margin-top: -1%;" src="./images/image3.png" alt="">
+    <video loop autoplay muted class="video" src="./video/videoplayback.mp4" type="video/mp4" style="width: 100%; " ></video>
+    <img class="second" style="width: 100%;" src="./images/image4.png" alt="">
+    <img class="second" style="margin-top: -1% ; width: 100%;" src="./images/image3.png" alt="">
      
-    <img class="second" src="./images/image6.png" alt="">
+    <img class="second" style="width: 100%;" src="./images/image6.png" alt="">
 
 
-    <img class="second" src="./images/image5.png" alt="">
+    <img class="second" style="width: 100%;" src="./images/image5.png" alt="">
 
-    <div class="theend">
+    <div style="margin-left: 33%;" class="theend">
         <div class="theendcard">
-            <div class="lastcard">
+            
 
-            </div>
             <div class="lastcard1">
 
                 <img src="https://www.dollargeneral.com/content/experience-fragments/dollargeneral/en/global-footer/master/_jcr_content/root/globalfooter/app-images/image.coreimg.100.300.png/1661990967164/app-store.png"
@@ -193,7 +192,7 @@
 
     <!-- footer completes here -->
 
-    <img class="images" src="./images//image2.png" alt="">
+    <img class="images" style="width: 100%;" src="./images//image2.png" alt="">
 
     <script>
         const queryString = window.location.search;
