Working on book now button

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentique</title>
-    <!-- <link rel="stylesheet" href="./styles/index.css"> -->
+    <link rel="stylesheet" href="./styles/index.css">
     <meta charset="UTF-8">
   
     <style>
@@ -93,7 +93,7 @@
         .dropdown-content a:hover {
           background-color: #ddd;
         }
-        
+
         .logout-link {
           color: #000;
           margin-left: 20px;
