navbar added to doctors listing page, appointment page and appointment listing page

--- a/Frontend/pages/bookappointment.html
+++ b/Frontend/pages/bookappointment.html
@@ -10,12 +10,12 @@
     <!-- flatpickr --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <!-- sweet alert --> <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title  >Book Appointment</title>
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/loader.css">
 </head>
 <body>
     <span id="loader" class="loader"></span>
-    <div id="nav"></div>
+    <nav id="nav"></nav>
     <h1 style="margin: 50px !important; text-align: center;">Book an Appointment</h1>
     <section class="vh-100 mt-4">
         <div class="container-fluid h-custom">
