--- a/Frontend/pages/myappointments.html
+++ b/Frontend/pages/myappointments.html
@@ -9,7 +9,7 @@
     <!-- MDB --><link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
     <!-- flatpickr --><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <!-- sweet alert --> <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
     <style>
         #appointMentDiv {
             padding-left: 5%;
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../styles/loader.css">
 </head>
 <body>
-    <div id="nav"></div>
+    <nav id="nav"></nav>
     <span id="loader" class="loader"></span>
     <h1 style="text-align: center; margin: 50px;" >Your Appointments</h1>
     <div id="appointMentDiv" class="row d-flex justify-content-center">
