home page linked to myappointment page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -134,6 +134,7 @@
             <div class="navbar-inner"></div>
             <ul>
               <li><a href="./pages/doctors.html">Doctors</a></li>
+              <li><a href="./pages/myappointments.html">Appointments</a></li>
               <li class="dropdown">
                 <a href="#">Login</a>
                 <div class="dropdown-content">
