--- a/Frontend/Admiindr/Dr.data.html
+++ b/Frontend/Admiindr/Dr.data.html
@@ -176,7 +176,7 @@
 <script src="../scripts/navbar.js"></script>
 <!-- MDB --><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
 <script src="../scripts/doctors.js"></script>
-<script>
+<script src="./Dr.data.js">
   
 </script>
 </html>
