--- a/Frontend/patients/html/login.html
+++ b/Frontend/patients/html/login.html
@@ -20,7 +20,7 @@
                     <input type="submit" value="Submit">
                 </form>
                 <div class="underline"></div>
-                <a href="http://localhost:8998/patient/auth/google"> <button class="btn googleBtn">Google</button></a>
+                <a href="https://greasy-sofa-244-production.up.railway.app/patient/auth/google"> <button class="btn googleBtn">Google</button></a>
                 <a href="./register.html" class="AccountCreation">Don't have an account? <span>Create an Account</span></a>
             </div>
         </div>
