--- a/Frontend/admin/html/login.html
+++ b/Frontend/admin/html/login.html
@@ -17,10 +17,12 @@
                 <form>
                     <input type="email" placeholder="Enter your Email" required>
                     <input type="password" placeholder="Enter Password" required>
-                    <input type="submit" value="Submit">
                 </form>
+                    <a href="http://127.0.0.1:5500/Frontend/Admiindr/Dr.data.html"><button style="margin-top: 10px; width: 200px; height: 30px;">Log In</button></a>
+                
+               
                 <div class="underline"></div>
-                <a href="http://localhost:8998/admin/auth/google"> <button class="btn googleBtn">Google</button></a>
+                <a href="https://greasy-sofa-244-production.up.railway.app/admin/auth/google"> <button class="btn googleBtn">Google</button></a>
                 <a href="#"><button class="btn facebookBtn">Facebook</button></a>
             </div>
         </div>
