--- a/Frontend/chat/chat.html
+++ b/Frontend/chat/chat.html
@@ -11,6 +11,7 @@
             margin: auto;
             width: 100%;
             text-align: center;
+            background-color: aqua;
         }
         #box{
             border: 1px solid red;
@@ -61,7 +62,7 @@
 </body>
 <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
 <script>
-    const socket = io("http://localhost:8998/", { transports: ["websocket"] })
+    const socket = io("https://greasy-sofa-244-production.up.railway.app/", { transports: ["websocket"] })
     var name = Math.random() * 1000000
     let col = 'rgba(' + randomcolor() + ',' + randomcolor() + ',' + randomcolor() + '\)'
     
