--- a/Frontend/request/bookingPage.html
+++ b/Frontend/request/bookingPage.html
@@ -46,7 +46,9 @@
                     <h3>Patient ID</h3>
                     <h3>Booking Date</h3>
                     <h3>Booking Time</h3>
+                    <h3>Chat</h3>
                     <div>
+                        
                         <h3>Accepted</h3>
                         <h3>Rejected</h3>
                     </div>
