--- a/Frontend/Admiindr/Dr.data.html
+++ b/Frontend/Admiindr/Dr.data.html
@@ -75,7 +75,7 @@
   <main>
 
     <h1>Register Doctor</h1>
-  <form id="doctorform" action="#" method="POST">
+  <form id="doctorform1" >
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 
@@ -84,6 +84,8 @@
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
+    <label for="password">password:</label>
+    <input type="password" id="password" name="password" required>
 
     <label for="imageURL">Image URL:</label>
     <input type="url" id="imageURL" name="imageURL" required>
@@ -91,8 +93,7 @@
     <label for="fees">Fees </label>
     <input type="text" id="fees" name="fees" required>
 
-    <label for="feesAddress">Address </label>
-    <input type="text" id="fees" name="fees" required>
+  
 
     <label for="description">Description:</label>
     <textarea id="description" name="description" rows="4" cols="50" required></textarea>
@@ -173,10 +174,11 @@
    <!--Main layout-->
   
 </body>
+<script src="./Dr.data.js"></script>
 <script src="../scripts/navbar.js"></script>
 <!-- MDB --><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
-<script src="../scripts/doctors.js"></script>
-<script src="./Dr.data.js">
+<!-- <script src="../scripts/doctors.js"></script> -->
+
   
-</script>
+
 </html>
