Admin page doctor crud operations added

--- a/Frontend/Admiindr/Dr.data.html
+++ b/Frontend/Admiindr/Dr.data.html
@@ -56,6 +56,10 @@
     cursor: pointer;
     float: right;
   }
+  #doctorform1{
+    margin-left: 10%;
+    margin-right:10%;
+  }
 
   input[type="submit"]:hover {
     background-color: #45a049;
@@ -75,7 +79,7 @@
   <main>
 
     <h1>Register Doctor</h1>
-  <form id="doctorform1" >
+  <form  id="doctorform1" >
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 
