--- a/Frontend/request/bookingPage.html
+++ b/Frontend/request/bookingPage.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div id="navbar">
-            <img src="/Frontend/images/logo.jpeg" alt="">
+           <img src="/Frontend/images/logo.jpeg" alt="" id="">
 
             <div id="catagory">
                 <h3>CONSULT</h3>
@@ -28,7 +28,7 @@
     </nav>
     <div id="body">
         <div id="left">
-            <div id="ss">
+            <!-- <div id="ss">
                 <div class="Search">
                     <img src="/Frontend/images/Search.png" alt="">
                     <input type="text" placeholder="Search for  patient">
@@ -40,15 +40,13 @@
                     <option value="option3">Option 3</option>
                   </select>
                   
-            </div>
+            </div> -->
             <div id="card">
                 <div id="headline">
                     <h3>Patient ID</h3>
                     <h3>Booking Date</h3>
                     <h3>Booking Time</h3>
-                    <h3>Chat</h3>
                     <div>
-                        
                         <h3>Accepted</h3>
                         <h3>Rejected</h3>
                     </div>
