--- a/Frontend/request/bookingPage.html
+++ b/Frontend/request/bookingPage.html
@@ -6,7 +6,7 @@
    
     <title>Appointment</title>
     <link rel="stylesheet" type="text/css" href="/Frontend/request/bookingPage.css">
-
+    <style src="./bookingPage.css"></style>
 </head>
 <body>
     <nav>
