--- a/Frontend/request/bookingPage.html
+++ b/Frontend/request/bookingPage.html
@@ -46,6 +46,7 @@
                     <h3>Patient ID</h3>
                     <h3>Booking Date</h3>
                     <h3>Booking Time</h3>
+                    <h3>chat</h3>
                     <div>
                         <h3>Accepted</h3>
                         <h3>Rejected</h3>
